added menu entry "View pending saves..."

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -7,6 +7,10 @@
         "message": "Speichern einer Webseite mit SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
     },
+    "menuViewPendingSaves": {
+        "message": "Anzeigen der aktuellen Speichern...",
+        "description": "Menu entry: 'View pending saves...'"
+    },
     "menuSelectProfile": {
         "message": "Wählen Sie das Standardprofil aus",
         "description": "Menu entry: 'Select the default profile'"
@@ -87,10 +91,10 @@
         "message": "Speicherung aktiviert: ",
         "description": "Button title during save: 'Save progress: xx%'"
     },
-	"buttonUploadProgressTooltip": {
-		"message": "Upload aktiviert: ",
-		"description": "Button title during save: 'Upload progress: xx%'"
-	},
+    "buttonUploadProgressTooltip": {
+        "message": "Upload aktiviert: ",
+        "description": "Button title during save: 'Upload progress: xx%'"
+    },
     "buttonOKBadge": {
         "message": "OK",
         "description": "Badge label: 'OK'"
@@ -343,10 +347,10 @@
         "message": "Sonstiges",
         "description": "Options sub-title: 'Misc.'"
     },
-	"optionBackgroundSave": {
-		"message": "Speicherung der Seiten im Hintergrund",
-		"description": "Options page label: 'save pages in background'"
-	},
+    "optionBackgroundSave": {
+        "message": "Speicherung der Seiten im Hintergrund",
+        "description": "Options page label: 'save pages in background'"
+    },
     "optionDisplayStats": {
         "message": "Statistik nach Verarbeitung in der Konsole anzeigen",
         "description": "Options page label: 'display stats in the console after processing'"
@@ -363,10 +367,10 @@
         "message": "Originalseite sichern",
         "description": "Options page label: 'save raw page'"
     },
-	"optionSaveToGDrive": {
-		"message": "In Google Drive speichern",
-		"description": "Options page label: 'save to Google Drive'"
-	},
+    "optionSaveToGDrive": {
+        "message": "In Google Drive speichern",
+        "description": "Options page label: 'save to Google Drive'"
+    },
     "optionsHelpLink": {
         "message": "Hilfe",
         "description": "Options help link"
@@ -454,5 +458,41 @@
     "profileRenamePrompt": {
         "message": "Neuen Namen für das ausgewählte Profil eingeben",
         "description": "Popup text 'Enter a new name for the selected profile' in the options page"
+    },
+    "pendingsTitle": {
+        "message": "Pending saves",
+        "description": "Title of the pending save page 'Pending saves' in the editor"
+    },
+    "pendingsCancelAllButton": {
+        "message": "Cancel all",
+        "description": "Pending saves button 'Cancel all'"
+    },
+    "pendingsTitleTitle": {
+        "message": "Titel",
+        "description": "Title of the first column in the table of the pending saves 'Title'"
+    },
+    "pendingsURLTitle": {
+        "message": "URL",
+        "description": "Title of the first column in the table of the pending saves 'URL'"
+    },
+    "pendingsStatusTitle": {
+        "message": "status",
+        "description": "Title of the second column in the table of the pending saves 'status'"
+    },
+    "pendingsPendingStatus": {
+        "message": "pending",
+        "description": "Value of 'status' for pending saves"
+    },
+    "pendingsProcessingStatus": {
+        "message": "processing",
+        "description": "Value of 'status' for current saves"
+    },
+    "pendingsCancellingStatus": {
+        "message": "cancelling",
+        "description": "Value of 'status' for cancelled saves"
+    },
+    "pendingsNoPendings": {
+        "message": "No pending saves",
+        "description": "Label displayed when they are no pending saves"
     }
 }
