--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -7,6 +7,10 @@
         "message": "SingleFileZ でページを保存",
         "description": "Menu entry: 'Save page with SingleFileZ'"
     },
+	"menuViewPendingSaves": {
+		"message": "View pending saves...",
+		"description": "Menu entry: 'View pending saves...'"
+	},
     "menuSelectProfile": {
         "message": "規定（default）のプロファイルを選択",
         "description": "Menu entry: 'Select the default profile'"
@@ -454,5 +458,41 @@
     "profileRenamePrompt": {
         "message": "選択したプロファイルの新しい名前を入力します。",
         "description": "Popup text 'Enter a new name for the selected profile' in the options page"
-    }
+    },
+	"pendingsTitle": {
+		"message": "Pending saves",
+		"description": "Title of the pending save page 'Pending saves' in the editor"
+	},
+	"pendingsCancelAllButton": {
+		"message": "Cancel all",
+		"description": "Pending saves button 'Cancel all'"
+	},
+	"pendingsTitleTitle": {
+		"message": "Title",
+		"description": "Title of the first column in the table of the pending saves 'Title'"
+	},
+	"pendingsURLTitle": {
+		"message": "URL",
+		"description": "Title of the first column in the table of the pending saves 'URL'"
+	},
+	"pendingsStatusTitle": {
+		"message": "status",
+		"description": "Title of the second column in the table of the pending saves 'status'"
+	},
+	"pendingsPendingStatus": {
+		"message": "pending",
+		"description": "Value of 'status' for pending saves"
+	},
+	"pendingsProcessingStatus": {
+		"message": "processing",
+		"description": "Value of 'status' for current saves"
+	},
+	"pendingsCancellingStatus": {
+		"message": "cancelling",
+		"description": "Value of 'status' for cancelled saves"
+	},
+	"pendingsNoPendings": {
+		"message": "No pending saves",
+		"description": "Label displayed when they are no pending saves"
+	}
 }
