--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -7,6 +7,10 @@
         "message": "Zapisz stronę z SingleFileZ",
         "description": "Menu entry: 'Save page with SingleFileZ'"
     },
+	"menuViewPendingSaves": {
+		"message": "Zobacz oczekujące zapisy...",
+		"description": "Menu entry: 'View pending saves...'"
+	},
     "menuSelectProfile": {
         "message": "Wybierz profil domyślny",
         "description": "Menu entry: 'Select the default profile'"
@@ -454,5 +458,41 @@
     "profileRenamePrompt": {
         "message": "Wpisz nową nazwę wybranego profilu",
         "description": "Popup text 'Enter a new name for the selected profile' in the options page"
-    }
+    },
+	"pendingsTitle": {
+		"message": "Oczekujące zapisy",
+		"description": "Title of the pending save page 'Pending saves' in the editor"
+	},
+	"pendingsCancelAllButton": {
+		"message": "Anuluj wszystkie",
+		"description": "Pending saves button 'Cancel all'"
+	},
+	"pendingsTitleTitle": {
+		"message": "Tytuł",
+		"description": "Title of the first column in the table of the pending saves 'Title'"
+	},
+	"pendingsURLTitle": {
+		"message": "Adres URL",
+		"description": "Title of the first column in the table of the pending saves 'URL'"
+	},
+	"pendingsStatusTitle": {
+		"message": "status",
+		"description": "Title of the second column in the table of the pending saves 'status'"
+	},
+	"pendingsPendingStatus": {
+		"message": "oczekiwanie",
+		"description": "Value of 'status' for pending saves"
+	},
+	"pendingsProcessingStatus": {
+		"message": "przetwarzanie",
+		"description": "Value of 'status' for current saves"
+	},
+	"pendingsCancellingStatus": {
+		"message": "anulowanie",
+		"description": "Value of 'status' for cancelled saves"
+	},
+	"pendingsNoPendings": {
+		"message": "Brak oczekujących zapisów",
+		"description": "Label displayed when they are no pending saves"
+	}
 }
