--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -375,6 +375,10 @@
         "message": "Hilfe",
         "description": "Options help link"
     },
+	"optionSynchronize": {
+		"message": "Optionen synchronisieren",
+		"description": "Options label: 'synchronize options'"
+	},
     "optionsResetButton": {
         "message": "Zurücksetzen",
         "description": "Options button: 'Reset'"
