--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -375,6 +375,10 @@
         "message": "ayuda",
         "description": "Options help link"
     },
+	"optionSynchronize": {
+		"message": "sincronizar opciones",
+		"description": "Options label: 'synchronize options'"
+	},
     "optionsResetButton": {
         "message": "Restablecer",
         "description": "Options button: 'Reset'"
