--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -375,6 +375,10 @@
         "message": "pomoc (w języku angielskim)",
         "description": "Options help link"
     },
+	"optionSynchronize": {
+		"message": "opcje synchronizacji",
+		"description": "Options label: 'synchronize options'"
+	},
     "optionsResetButton": {
         "message": "Resetuj",
         "description": "Options button: 'Reset'"
