--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -375,6 +375,10 @@
         "message": "помощь",
         "description": "Options help link"
     },
+	"optionSynchronize": {
+		"message": "synchronize options",
+		"description": "Options label: 'synchronize options'"
+	},
     "optionsResetButton": {
         "message": "Сброс",
         "description": "Options button: 'Reset'"
