--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -143,7 +143,7 @@
         "message": "otwieraj okno dialogowe z monitem, aby edytować zawartość paska informacyjnego",
         "description": "Options page label: 'open a prompt dialog to edit the infobar content'"
     },
-    "optionAutoCloseLabel": {
+    "optionAutoClose": {
         "message": "automatycznie zamykaj kartę po zapisaniu strony",
         "description": "Options page label: 'auto-close the tab after the page is saved'"
     },
