--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -143,7 +143,7 @@
 		"message": "відкривати діалогове вікно для редагування вмісту інформаційної панелі",
 		"description": "Options page label: 'open a prompt dialog to edit the infobar content'"
 	},
-	"optionAutoCloseLabel": {
+	"optionAutoClose": {
 		"message": "автоматично закривати вкладку після збереження сторінки",
 		"description": "Options page label: 'auto-close the tab after the page is saved'"
 	},
