--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -143,7 +143,7 @@
         "message": "Inhalt des Infoknopfs im Dialogfenster eingeben",
         "description": "Options page label: 'open a prompt dialog to edit the infobar content'"
     },
-    "optionAutoCloseLabel": {
+    "optionAutoClose": {
         "message": "Automatisches Schließen des Tabs nach dem Speichern der Seite",
         "description": "Options page label: 'auto-close the tab after the page is saved'"
     },
