--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -143,7 +143,7 @@
         "message": "infobar のコンテンツを編集するためのプロンプトダイアログを開く",
         "description": "Options page label: 'open a prompt dialog to edit the infobar content'"
     },
-    "optionAutoCloseLabel": {
+    "optionAutoClose": {
         "message": "ページが保存された後にタブを自動的に閉じる",
         "description": "Options page label: 'auto-close the tab after the page is saved'"
     },
