--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -143,7 +143,7 @@
         "message": "открывать диалоговое окно для редактирования содержимого информационной панели",
         "description": "Options page label: 'open a prompt dialog to edit the infobar content'"
     },
-    "optionAutoCloseLabel": {
+    "optionAutoClose": {
         "message": "auto-close the tab after the page is saved",
         "description": "Options page label: 'auto-close the tab after the page is saved'"
     },
