--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -143,7 +143,7 @@
         "message": "打开一个提示窗口以编辑信息栏内容",
         "description": "选项页标签: '打开一个提示窗口以编辑信息栏内容'"
     },
-    "optionAutoCloseLabel": {
+    "optionAutoClose": {
         "message": "auto-close the tab after the page is saved",
         "description": "Options page label: 'auto-close the tab after the page is saved'"
     },
