--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -143,7 +143,7 @@
         "message": "打開一個提示窗口以編輯信息欄內容",
         "description": "選項頁標籤: '打開一個提示窗口以編輯信息欄內容'"
     },
-    "optionAutoCloseLabel": {
+    "optionAutoClose": {
         "message": "auto-close the tab after the page is saved",
         "description": "Options page label: 'auto-close the tab after the page is saved'"
     },
