--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -371,6 +371,10 @@
         "message": "In Google Drive speichern",
         "description": "Options page label: 'save to Google Drive'"
     },
+	"optionSaveCreatedBookmarks": {
+		"message": "Die Seite eines neu angelegten Bookmark speichern",
+		"description": "Options page label: 'save the page of a newly created bookmark'"
+	},
     "optionsHelpLink": {
         "message": "Hilfe",
         "description": "Options help link"
