--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -372,7 +372,7 @@
         "description": "Options page label: 'save to Google Drive'"
     },
 	"optionSaveCreatedBookmarks": {
-		"message": "pisuj stronę nowo utworzonej zakładki",
+		"message": "zapisuj stronę nowo utworzonej zakładki",
 		"description": "Options page label: 'save the page of a newly created bookmark'"
 	},
     "optionsHelpLink": {
